tests/parsing/cmc/errors/163.expected
File "tests/parsing/cmc/errors/163.cmc", line 1, character 18-19:
1 | (declare-enum-sort)
                      ^
Error while parsing an enumeration declaration, read a closing parenthesis,
      but expected a symbol representing the enum type.
